fix: problem with scrollbars in chrome linux

--- a/src/assets/projects/roc/css/global.scss
+++ b/src/assets/projects/roc/css/global.scss
@@ -591,19 +591,19 @@
     // background: #d0d0d0;
 }
 
-// .ant-table-body::-webkit-scrollbar {
-//     width: 6px;
-// }
+ .ant-table-body::-webkit-scrollbar {
+     width: 6px;
+ }
 
-// .ant-table-body::-webkit-scrollbar-track {
-//     background-color: transparent;
-// }
+ .ant-table-body::-webkit-scrollbar-track {
+     background-color: transparent;
+ }
 
-// .ant-table-body::-webkit-scrollbar-thumb {
-//     /*box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);*/
-//     background: rgba(201, 214, 255, 0.24);
-//     border-radius: 3px;
-// }
+ .ant-table-body::-webkit-scrollbar-thumb {
+     /*box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);*/
+     background: rgba(201, 214, 255, 0.24);
+     border-radius: 3px;
+ }
 
 /* Token icons */
 
